<resources>
    <string name="app_name" translatable="false">Day \'n\' Night</string>
    <string name="start_button">Start</string>
    <string name="option_button" translatable="false">Options</string>
    <string name="center_button">Center</string>
    <string name="free_cam_button">Unlock Camera</string>
    <string name="night_button">Go Night</string>
    <string name="character_button">Customize</string>

    <string name="title_activity_maps">Map Activity</string>
    <string name="ok" translatable="false">OK</string>
    <string name="rationale_dialog">Votre localisation est nécessaire pour jouer à la partie Jour du jeu et obtenir des objets incroyables!!</string>

    <string name="badge" translatable="false">badge</string>
    <string name="inventaire" translatable="false">inventaire</string>
    <string name="menu" translatable="false">menu</string>
    <string name="options" translatable="false">options</string>

    <!-- CreateAccountActivity -->
    <string name="caa_name">Name</string>
    <string name="caa_desc">Please enter your name</string>
    <!-- ********************* -->

    <!-- SettingsActivity -->
    <string name="sa_title">Settings</string>
    <string name="sa_volume" translatable="false">Volume</string>
    <string name="sa_music">Music</string>
    <string name="sa_character" translatable="false">Avatar</string>
    <string name="sa_language">Language</string>
    <!-- **************** -->

    <!-- layout_badges -->
    <string name="fleche_de_retour"><![CDATA[Flèche de retour <----]]></string>
    <string name="logo_du_badge">Logo du badge</string>
    <string name="location_capture">Location de la capture</string>
    <string name="date_capture">12–11–1997</string>
    <string name="type_de_badge">Type de badge</string>
    <string name="title_activity_test" translatable="false">TEST</string>
    <!-- ************* -->

    <!-- popup_informations_objet-->
    <string name="fermer">Fermer</string>
    <string name="acheter">Acheter</string>
    <string name="prix_nulle">000</string>
    <!-- Spéciaux -->
    <string name="toucher_par_coup">Nbre de tagues/coup : %1$d</string>
    <string name="nb_cibles">Nbre de cibles : %1$d</string>
    <string name="portee">Portée : %1$s</string>
    <string name="menuJeu">Menu</string>
    <string name="recommencer">Recommencer</string>
    <string name="recompense_dipo_dans">Récompense disponible dans</string>
    <string name="secondes">secondes</string>
    <string name="jeu_de_jour_desactive">Le jeu de jour a été désactivé. Activez la géolocalisation dansles réglages pour l\'activer!</string>
    <string name="bravo">Bravo!</string>
    <string name="utiliser">Utiliser</string>
<<<<<<< HEAD
    <string name="intervalle_par_coup">Intervalle de temps/coup : %1$.1fs</string>
    <string name="rarete">Rareté : %1$s</string>
=======
    <string name="musique">Musique</string>
    <string name="langue">Langue</string>
    <string name="fran_ais">Français</string>
    <string name="english">English</string>
    <string name="effacer_partie">Effacer partie</string>
>>>>>>> 4c9d3614e69b5322c31bd561e93a79c98444dae7
    <!-- ************ -->
</resources>
