<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/screen_background_dark_transparent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="82dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="10dp"
        android:background="@android:drawable/ic_media_play" />

    <Button
        android:id="@+id/badgePauseButton"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/oval_button_shape"
        android:text="@string/badge"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/inventairePauseButton"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/oval_button_shape"
        android:text="@string/inventaire"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/menuPauseButton"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/oval_button_shape"
        android:text="@string/menu"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/settingsPauseButton"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/oval_button_shape"
        android:text="@string/options"
        android:textColor="@android:color/white" />

</android.support.v7.widget.LinearLayoutCompat>