<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/layout_popup_informations_objet"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/playPauseButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="82dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/droit1" />

    <Button
        android:id="@+id/badgePauseButton"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/style_button_ripple_coin"
        android:text="@string/badges"
        android:textColor="?android:attr/colorForeground" />

    <Button
        android:id="@+id/inventairePauseButton"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/style_button_ripple_coin"
        android:text="@string/inventaire"
        android:textColor="?android:attr/colorForeground" />

    <Button
        android:id="@+id/menuPauseButton"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/style_button_ripple_coin"
        android:text="@string/menu"
        android:textColor="?android:attr/colorForeground" />

    <Button
        android:id="@+id/settingsPauseButton"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/style_button_ripple_coin"
        android:text="@string/options"
        android:textColor="?android:attr/colorForeground" />

</android.support.v7.widget.LinearLayoutCompat>